# boids

./: .gitmodules  CMakeLists.txt  CmakeLists.txt
ext/glad/: CmakeLists.txt  glad.c
ext/hf_lib/include/: hf_quat.h
ext/hf_lib/src/: hf_quat.c
ext/stb/: CMakeLists.txt
include/glad/: glad.h
res/: tube.ct
res/maps/: debug.omp  map.omp  map2.omp  map3.omp  map4.omp  map5.omp  map6.omp  oses2.omp  oses3.omp  toco.omp
res/shaders/: debug.frag  debug.vert  debug_old.frag  post.frag  post.vert  post_tv.frag  shader.frag  shader.vert  triplanar.frag  ui.frag  ui.vert
src/: README.md  boids.c  boids.h  hfe.c  hfe.h  main.c  oe.c  oe.h
